# Onya

./: .gitignore  AGENTS.md  AICONTEXT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  agent-control.toml  onya-graph.SKILL.md  pyproject.toml  setup.py
.claude/skills/onya-graph/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/testing/: SKILL.md
.github/workflows/: main.yml
demo/: .gitignore
demo/document_merge/: document_merge_demo.py
demo/graphviz_basic/: README.md  graphviz_demo.py
demo/mermaid_basic/: README.md  mermaid_demo.py
demo/nx_analytics/: README.md  nx_demo.py  social.onya
doc/: design-interpretations-literate.md  design-interpretations-pylib.md  design-interpretations-strings-vs-typing.md  design-persistence-architecture.md  python-tutorial.md
pylib/: __about__.py  __init__.py  graph.py  interp.py  terms.py  util.py
pylib/cli/: onya.py
pylib/serial/: __init__.py  _literate_parse.py  graphviz.py  literate.py  literate_lex.py  litparse_util.py  mermaid.py  nx.py
pylib/store/: __init__.py  _relational.py  base.py  exceptions.py  filesystem.py  postgres.py  sqlite.py  sync.py
test/: conftest.py  test_assertion_id.py  test_docheader_roundtrip.py  test_graph.py  test_graph_merge.py  test_graph_select.py  test_graph_union.py  test_graphobj.py  test_interp_literate.py  test_interp_model.py  test_interp_plugins.py  test_readme.py  test_serial_graphviz.py  test_serial_literate.py  test_serial_nx.py  test_serial_roundtrip.py
test/resource/schemaorg/: achebe-bio.onya  thingsfallapart.onya
test/store/: conftest.py  store_helpers.py  test_store_assertions.py  test_store_capabilities.py  test_store_conformance.py  test_store_connect.py  test_store_convention.py  test_store_guards.py  test_store_packaging.py  test_store_postgres.py  test_store_relational.py
