[build-system]
requires = ['hatchling>=1.13.0']
build-backend = 'hatchling.build'

[project]
name = 'Onya'
description = 'Knowledge graph (property graph-style) model and serialization for web resources'
readme = 'README.md'
authors = [
    {name = 'Uche Ogbuji', email = 'uche@ogbuji.net'},
]
license = {text = 'Apache-2.0'}
requires-python = '>=3.12'
keywords = ['web', 'data', 'graph', 'rdf', 'linked-data']
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet :: WWW/HTTP',
]
dynamic = ['version']

dependencies = [
    'Amara>=4.0.1',
    # 'Amara @ git+https://github.com/OoriData/Amara.git@main',
    'pyparsing',   # Parser for Onya Literate format
    'markdown',    # Markdown support
]

[project.optional-dependencies]
# Extra requirements for project contributors & other developers
dev = [
  "build",
  "twine",
  "hatch",
  "pipdeptree",
  "ruff",
  "pytest",
  "pytest-mock",
  "pytest-asyncio",
]

demo = [
    'fire',  # CLI framework
]

[project.urls]
Homepage = 'https://github.com/uogbuji/onya'
Repository = 'https://github.com/uogbuji/onya'
Issues = 'https://github.com/uogbuji/onya/issues'

[tool.hatch.version]
path = 'pylib/__about__.py'

[tool.hatch.build]
include = ["*.toml", "*.py"]

# Package configuration
# Note: We only remap pylib->wordloom for wheels, not for sdist
# This ensures both direct wheel builds and wheels-from-sdist work correctly

[tool.hatch.build.targets.sdist]
# Preserve original pylib structure in sdist so wheel-from-sdist can find it
only-include = [
  "pylib",
  # "resources",
  "test",
  "README.md",
  "LICENSE",
  "LICENSE-spec",
  "SPEC.md",
  "pyproject.toml",
]

[tool.hatch.metadata]
allow-direct-references = true
