[build-system]
requires = ['hatchling>=1.13.0']
build-backend = 'hatchling.build'

[project]
name = 'Onya'
description = 'Knowledge graph (property graph-style) model and serialization for web resources'
readme = 'README.md'
authors = [
    {name = 'Uche Ogbuji', email = 'uche@ogbuji.net'},
]
license = {text = 'Apache-2.0'}
requires-python = '>=3.12'
keywords = ['web', 'data', 'graph', 'rdf', 'linked-data']
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dynamic = ['version']

dependencies = [
    'Amara>=4.0.1',
    # 'Amara @ git+https://github.com/OoriData/Amara.git@main',
    'pyparsing',   # Parser for Onya Literate format
    'fire',        # CLI framework (used by the onya console script)
]

[project.scripts]
onya = 'onya.cli.onya:main'

# Store backend registry. Object references use the *installed* (`onya.store.*`) names,
# not `pylib.*` — the pylib->onya wheel remap applies to entry points too. Verify with a
# wheel build, not just an install, since the remap only happens during wheel building.
[project.entry-points."onya.store.backends"]
file = 'onya.store.filesystem:FileStore'
sqlite = 'onya.store.sqlite:SqliteStore'
postgresql = 'onya.store.postgres:PostgresStore'

[project.optional-dependencies]
# PostgreSQL backend (onya.store.postgres). asyncpg is imported lazily, so the base install
# stays dependency-free; only `pip install "onya[postgres]"` pulls it in.
postgres = ['asyncpg>=0.30']
# Extra requirements for project contributors & other developers
dev = [
    "build",
    "twine",
    "hatch",
    "pipdeptree",
    "ruff",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",  # property-based tests for the interp `number` round-trip law (test-only)
]

demo = [
]

[project.urls]
Homepage = 'https://github.com/OoriData/Onya'
Repository = 'https://github.com/OoriData/Onya'
Issues = 'https://github.com/OoriData/Onya/issues'

[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = ["scratch", "demo", ".git", ".venv", "dist", "build", ".hypothesis"]
# Store backends are async; auto mode lets `async def test_*` run without per-test markers.
asyncio_mode = "auto"
markers = [
    "integration: hits a live service (e.g. PostgreSQL); excluded from the default fast run",
]

[tool.hatch.version]
path = 'pylib/__about__.py'

[tool.hatch.build]
include = ["*.toml", "*.py"]

# Package configuration
# Note: We only remap pylib->onya for wheels, not for sdist
# This ensures both direct wheel builds and wheels-from-sdist work correctly
#
# Development note: Hatch environments don't work well with this pylib→onya remapping.
# The remapping in [tool.hatch.build.sources] only applies during wheel building, not
# in dev environments. Hatch's dev-mode uses editable installs which can't apply the
# remapping, and dev-mode=false means no install happens at all.
#
# Use proper installation instead: `uv pip install -U .`
[tool.hatch.build.targets.wheel]
# only-include = ["pylib", "resources"]
only-include = ["pylib"]

[tool.hatch.build.targets.wheel.sources]
"pylib" = "onya"
# "resources" = "onya/resources"

[tool.hatch.build.targets.sdist]
# Preserve original pylib structure in sdist so wheel-from-sdist can find it
only-include = [
    "pylib",
    # "resources",
    "test",
    "README.md",
    "LICENSE",
    "LICENSE-spec",
    "SPEC.md",
    "pyproject.toml",
]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.hatch.envs.all.matrix]]
python = ["3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "mypy>=1.0.0",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:pylib test}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = ["E", "F"]
lint.ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["onya"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"test/**/*" = ["PLR2004", "S101", "TID252"]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
# "path/to/file.py" = ["E402"]  # in specific file.py
# Ignore `D` rules everywhere except for the `src/` directory.
"!pylib/**.py" = ["D"]
# Ignore `E501` (line too long) in Jupyter notebooks
"*.ipynb" = ["E501"]

[tool.coverage.run]
source_pkgs = ["onya", "test"]
branch = true
parallel = true
omit = [
    "pylib/__about__.py",
]

[tool.coverage.paths]
onya = ["pylib", "*/pylib"]
test = ["test", "*/test"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
